# ChangeLog for dev-db/mysql-workbench
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql-workbench/ChangeLog,v 1.11 2010/04/19 14:01:11 graaff Exp $

*mysql-workbench-5.2.19 (19 Apr 2010)

  19 Apr 2010; Hans de Graaff <graaff@gentoo.org>
  +mysql-workbench-5.2.19.ebuild:
  Version bump: bug fixes. Drop patch that got applied upstream.

*mysql-workbench-5.2.18 (13 Apr 2010)

  13 Apr 2010; Hans de Graaff <graaff@gentoo.org>
  +mysql-workbench-5.2.18.ebuild:
  Version bump with bug fixes, see http://wb.mysql.com/?p=539

*mysql-workbench-5.2.17-r1 (09 Apr 2010)

  09 Apr 2010; Hans de Graaff <graaff@gentoo.org>
  +mysql-workbench-5.2.17-r1.ebuild,
  +files/mysql-workbench-5.2.17-as-needed-modules.patch,
  +files/mysql-workbench-5.2.17-python-libs.patch:
  More --as-needed patching in modules. This brings back the accept/discard
  buttons in EDIT mode. Also improve Python detection to fix compilation
  issues with forced --as-needed.

*mysql-workbench-5.2.17 (03 Apr 2010)

  03 Apr 2010; Hans de Graaff <graaff@gentoo.org>
  +mysql-workbench-5.2.17.ebuild,
  +files/mysql-workbench-5.2.17-as-needed.patch:
  Version bump. Drop patches applied upstream. Update --as-needed patch. See
  http://wb.mysql.com/?p=530 for changes.

  27 Mar 2010; Hans de Graaff <graaff@gentoo.org>
  mysql-workbench-5.2.16.ebuild:
  Update gtkmm dependency in accordance with real requirements, fixes
  #311421.

  27 Mar 2010; Hans de Graaff <graaff@gentoo.org>
  -mysql-workbench-5.2.15.ebuild:
  Remove old version.

  24 Feb 2010; Christian Ruppert <idl0r@gentoo.org>
  mysql-workbench-5.2.15.ebuild, mysql-workbench-5.2.16.ebuild,
  +files/mysql-workbench-5.2.16-asneeded.patch:
  Fix linking with -Wl,--as-needed, bug 306387, thanks to Bjoern Thorwirth
  <Bjoern.Thorwirth@uni-due.de>.

*mysql-workbench-5.2.16 (17 Feb 2010)

  17 Feb 2010; Hans de Graaff <graaff@gentoo.org>
  +mysql-workbench-5.2.16.ebuild: