@@ -10,17 +10,19 @@ DIST mysql-workbench-oss-5.2.16.tar.gz 15139915 RMD160 b5992ebb373baf71c922110ae
 DIST mysql-workbench-oss-5.2.17.tar.gz 15942705 RMD160 6c485b64790e54f95318495ba96527f98a209d72 SHA1 63301b79471daf99f4d29b1787ddeab3d1873495 SHA256 ed69f0a9e6a930f9b05472666fd72b7592bea9dc23d9abacb802b724534f95f4
 DIST mysql-workbench-oss-5.2.18.tar.gz 15933425 RMD160 1e632e05066ad5d6ef53f047fefc20f758dab9f6 SHA1 34f73d3112e23ff3baf01a84833942f5721ed7ed SHA256 a7434442730818c355fa07b26129fce86044cc25d4884ebd4f35b80c6644325d
 DIST mysql-workbench-oss-5.2.19.tar.gz 15934534 RMD160 ede7829c1b58cde7f3acf5cd03a35c722c5c1363 SHA1 ad464ba60cea282e921c5964f51e7fea9154f8af SHA256 81700fb09cccf5f6e7fbda349f126dc321ddedff802ba5ee094d275cd3eb8920
+DIST mysql-workbench-oss-5.2.20.tar.gz 16511576 RMD160 e3ab3e6d9c03d4f496e6025e41771dad43dcc6f2 SHA1 daaa467c44bb3459d3c7be4d16fe1036d4dab210 SHA256 9aa9dfe9a654c4c2aae846aef2d32988dc03a6e7489f15919a3b1e95d8cace07
 EBUILD mysql-workbench-5.2.16.ebuild 1456 RMD160 ac6aa703f277ddac14d6cf83d5df3dc378ec5345 SHA1 4fe4ac7b5faf302483d4b955c949df251970623e SHA256 077f96566fa07ffc830b3a2f10203a52a828e9afb29c1fac75fe9c33e9b288ac
 EBUILD mysql-workbench-5.2.17-r1.ebuild 1506 RMD160 59d04efdd85f66857a7cb3085851e1eee16db0f3 SHA1 3192d4699d0f4a58ec967c0d385cc71c27904957 SHA256 b45382a5685325265f95ef23502fb08a52b045ccd9964a690394b45dc9e63220
 EBUILD mysql-workbench-5.2.17.ebuild 1391 RMD160 cb32d546a83482081efec234447d8c1ae36a0080 SHA1 e0be8ccc3849af580c7e0a0b1a345a4ed1d2fa23 SHA256 be458f80b8b938943c96f37484e90c7810a564e0c33ad417d2c3a49ee8bf4783
 EBUILD mysql-workbench-5.2.18.ebuild 1503 RMD160 3b45137a53122aa88e9ba5ded7e07090991d660a SHA1 779dee89b56c5741087c73420813dd8992619702 SHA256 809b5a7eec3184755188acef3eacf856e56fcbe972f1ff72f533afca7b7ae940
 EBUILD mysql-workbench-5.2.19.ebuild 1452 RMD160 14fdff36696839f64a36996af8fd9441720ae27c SHA1 0d02cef7b9ce1db808e157fc8d1192acc0999d75 SHA256 9a0dbfb6c82fdae7e4fbab236583037d08c4874a3a0ae9a7091c25a5b6d9e5f5
-MISC ChangeLog 2694 RMD160 7d99ac864a9b1826e5ae090af540c19332451733 SHA1 aaf01b6f61040baf3923726660d41922bdc2161b SHA256 15c888ddc8489f1c3ff536bbd6b7bc6daedc4779902e4ef97b6b307e46b01d57
+EBUILD mysql-workbench-5.2.20.ebuild 1452 RMD160 8f1632c7fad50bee5574c258ea5493e5374bf8a6 SHA1 0062e4ec7e4063c38eef3e0fa84633421dddcbb4 SHA256 662ba988deac4467b8813db1427e56cccda9025f7fdf9761446a462e8a83bb7b
+MISC ChangeLog 2894 RMD160 18eec9abf97a00d0184baf345beb56b5629754bc SHA1 33a437a964eae0eb7a5ba87a28f277c629872897 SHA256 14e0c003c841af6e72911c6dc616bbc7a01efebb9aa174e27f22b6c540b65896
 MISC metadata.xml 222 RMD160 c395116c51764efaa671a0f89a7d8992ecbe7304 SHA1 2095e0ced2657346964271e45cc69027b0ccd49d SHA256 0adb6b2a2a8cc78f3d28b8b629db9d9e5731f21da86168ae88eeadc8b82d3225
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkvMYjIACgkQeM7EJeUH71NNLQCfQ0dkQdKihq5qvZ3GaoeLQ/Jv
-YLgAnR04pWZLP+bZdW6wiSkkp1ybYBKR
-=uQb7
+iEYEARECAAYFAkvXzuUACgkQeM7EJeUH71NHOQCfVZAoLtPiphugWWm9KN0d9s6q
+UawAn0WTE5KrStEsfVWnZ3Okw7i5xztK
+=LMpy
 -----END PGP SIGNATURE-----
