@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/mysql-workbench
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql-workbench/ChangeLog,v 1.11 2010/04/19 14:01:11 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql-workbench/ChangeLog,v 1.12 2010/04/28 05:59:48 graaff Exp $
+
+*mysql-workbench-5.2.20 (28 Apr 2010)
+
+  28 Apr 2010; Hans de Graaff <graaff@gentoo.org>
+  +mysql-workbench-5.2.20.ebuild:
+  Version bump. Bump MySQL dependency to 5.1 as per upstream release notes.
 
 *mysql-workbench-5.2.19 (19 Apr 2010)
 
